vision/lbr_fri_ros2_stack_ws_foxy2/log/build_2023-12-03_22-39-42/workspace_controller/stdout_stderr.log
running egg_info
writing ../../../../build/workspace_controller/workspace_controller.egg-info/PKG-INFO
writing dependency_links to ../../../../build/workspace_controller/workspace_controller.egg-info/dependency_links.txt
writing entry points to ../../../../build/workspace_controller/workspace_controller.egg-info/entry_points.txt
writing requirements to ../../../../build/workspace_controller/workspace_controller.egg-info/requires.txt
writing top-level names to ../../../../build/workspace_controller/workspace_controller.egg-info/top_level.txt
reading manifest file '../../../../build/workspace_controller/workspace_controller.egg-info/SOURCES.txt'
writing manifest file '../../../../build/workspace_controller/workspace_controller.egg-info/SOURCES.txt'
running build
running build_py
copying workspace_controller/controller.py -> /home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/build/workspace_controller/build/lib/workspace_controller
copying workspace_controller/control_node.py -> /home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/build/workspace_controller/build/lib/workspace_controller
running install
running install_lib
copying /home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/build/workspace_controller/build/lib/workspace_controller/controller.py -> /home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/install/workspace_controller/lib/python3.8/site-packages/workspace_controller
copying /home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/build/workspace_controller/build/lib/workspace_controller/control_node.py -> /home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/install/workspace_controller/lib/python3.8/site-packages/workspace_controller
byte-compiling /home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/install/workspace_controller/lib/python3.8/site-packages/workspace_controller/controller.py to controller.cpython-38.pyc
byte-compiling /home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/install/workspace_controller/lib/python3.8/site-packages/workspace_controller/control_node.py to control_node.cpython-38.pyc
  File "/home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/install/workspace_controller/lib/python3.8/site-packages/workspace_controller/control_node.py", line 64
    print(f"Current theta: {joint_state.position"})
                                                 ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('

running install_data
running install_egg_info
removing '/home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/install/workspace_controller/lib/python3.8/site-packages/workspace_controller-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../../../build/workspace_controller/workspace_controller.egg-info to /home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/install/workspace_controller/lib/python3.8/site-packages/workspace_controller-0.0.0-py3.8.egg-info
running install_scripts
Installing control_node script to /home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/install/workspace_controller/lib/workspace_controller
writing list of installed files to '/home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/build/workspace_controller/install.log'
